# AskVLM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CUDA_FIX.md  LICENSE  Makefile  PYTHON_SETUP.md  README.en.md  README.md  TODO.md  TODO_legacy.md  askvlm.defaults.json  build.ps1  build.py  ci_cache.py  cli.py  env.example  main.py  models.json  pyproject.toml  requirements-dev.txt  run.ps1  test.py  whisper_transcriber.py
.cursor/agents/: Deadlock Breaker.md  Junior Coder.md  Junior SWE.md  Lead QA.md  Middle SWE.md  Middle+ SWE.md  Senior QA.md  Senior SWE.md  Verifier Pro.md  Verifier.md
.cursor/rules/: SubagentRules.md  Techlead.mdc  check.mdc
.linting/: black.toml  flake8.cfg  isort.cfg  mypy.ini  pyrightconfig.json
.specstory/: .gitignore  .project.json
core/: audio_io.py  cloud_speechkit.py  diarization.py  external_client.py  external_daemon.py  external_queue.py  ffmpeg.py  gigaam_ctc_wrapper.py  gpu_guard.py  llm_formatter.py  llm_prompts.py  lm_studio_rest.py  pipelines.py  settings.py  stt_providers.py  video_qa_answer_bundle.py  video_qa_context.py  video_qa_executor.py  video_qa_lm_studio_chunk_inferencer.py  video_qa_lm_studio_client.py  video_qa_lm_studio_termination.py  video_qa_local_run.py  video_qa_manifest.py  video_qa_orchestration.py  video_qa_policy.py  video_qa_preparation.py  video_qa_runtime.py  video_qa_sources.py  video_qa_url_import.py  whisper_wrapper.py  whisperx_wrapper.py
doc/: AutoSubtitles.en.md  AutoSubtitles.md  CUDA_SETUP.md  CUDA_SETUP.ru.md  Disfluency-Cleanup-Design.en.md  Disfluency-Cleanup-Design.md  EXTERNAL_CLI_TRANSCRIBER.en.md  EXTERNAL_CLI_TRANSCRIBER.md  Main UX.en.md  Main UX.md  Multimodal GUI Design.en.md  Multimodal GUI Design.md  OPENROUTER_INTEGRATION.en.md  OPENROUTER_INTEGRATION.md  OpenRouter Communication.md  Qwen3.5-35B-A3B.en.md  Qwen3.5-35B-A3B.md
doc/recon/: Codex Max.md  Composer 2.md
docs/: PRE_COMMIT_GUIDE.md
editing/: operations.py  text_model.py
gui/: __init__.py  export_dialog.py  main_window.py  preferences_dialog.py  speaker_sidebar.py  subtitle_preview.py  video_qa.py  video_qa_worker.py  wysiwyg_editor.py
tests/: conftest.py  test_benchmark_two_variants_real.py  test_cli_external_extract_frames.py  test_cli_external_transcribe.py  test_cov_gates_basic.py  test_cuda_required.py  test_e2e_crash.py  test_exporters_basic.py  test_external_client.py  test_external_daemon.py  test_external_queue.py  test_gigaam_ctc_wrapper.py  test_integration_diarization.py  test_integration_pipeline.py  test_integration_queue.py  test_integration_queue_real.py  test_lm_studio_e2e_heavy.py  test_lm_studio_ping.py  test_lm_studio_rest.py  test_local_pipeline_stt_provider.py  test_metadata_and_icons.py  test_misc_units.py  test_no_empty.py  test_phase15.py  test_pipeline_lifecycle.py  test_pipelines_build_doc.py  test_units_exporters.py  test_units_exporters_gap.py  test_units_ffmpeg.py  test_utils_and_audio.py  test_video_qa_answer_bundle.py  test_video_qa_context.py  test_video_qa_executor.py  test_video_qa_lm_studio_chunk_inferencer.py  test_video_qa_lm_studio_client.py  test_video_qa_lm_studio_client_live.py  test_video_qa_lm_studio_termination.py  test_video_qa_local_run.py  test_video_qa_manifest.py  test_video_qa_orchestration.py  (+9 more)
tools/: bench_whisper.py  benchmark_stt.py  check_fp32_load.py  find_oom_threshold.py
utils/: askvlm_defaults.py  cleanup.py  downloader.py  env.py  exporters.py  logging.py
