[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artemonims-speech-kit"
version = "0.1.0"
description = "AI-powered speech transcription and editing toolkit"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PySide6>=6.5.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "typer>=0.12.0",
    # ! ML dependencies will be added in Phase 2
    # "openai-whisper>=20231117",
    # "pyannote.audio>=3.1.0,<3.3.0",
    # "llama-cpp-python>=0.2.0,<0.3.0",
    # "python-docx>=1.1.0",
    # "odfpy>=1.4.0",
    # "pyspellchecker>=0.7.0",
    # "nvidia-ml-py3>=7.352.0",
]

[tool.setuptools.packages.find]
include = ["core*", "gui*", "editing*", "utils*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "bandit[toml]>=1.7.5",
    "pylint>=3.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "types-tqdm>=4.66.0",
    "types-requests>=2.31.0",
    "pip-audit>=2.6.0",
]
ml = [
    # * Torch is installed via build.ps1 -EnsureCUDA to ensure GPU wheel (cu128/cu124/cu121)
    "torch>=2.5.0",
    "openai-whisper>=20231117",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0,<3.3.0",
    "llama-cpp-python>=0.2.0,<0.3.0",
    "python-docx>=1.1.0",
    "odfpy>=1.4.0",
    "nvidia-ml-py3>=7.352.0",
]

# ! Ruff configuration - comprehensive linting and formatting
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "ALL",  # * Enable all rules for strictest checking
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in `__init__`
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Implicitly concatenated string literals (conflicts with formatter)
    "FIX002", # Line contains TODO (we use TODO comments intentionally)
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert detected
    "ARG001", # Unused function argument
    "PLR2004", # Magic value used in comparison
]
"*/__init__.py" = [
    "F401",   # Imported but unused
]
"utils/cleanup.py" = [
    "S603",   # subprocess call: check for execution of untrusted input (false positive for list args)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
known-first-party = ["core", "gui", "editing", "utils"]

[tool.ruff.lint.pylint]
max-args = 8
max-locals = 20

# ! MyPy configuration - strict static type checking
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_no_return = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "pyannote.*",
    "llama_cpp.*",
    "torch.*",
    "torchaudio.*",
    "nvidia_ml_py.*",
    "docx.*",
    "odf.*",
    "spellchecker.*",
    "ffmpeg.*",
]
ignore_missing_imports = true

# ! Bandit configuration - security analysis
[tool.bandit]
exclude_dirs = ["tests", "env", ".git"]
skips = ["B101"]  # Skip assert_used test

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py", "tests/*"]

# ! Pylint configuration - additional code quality checks
[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
py-version = "3.11"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "C0301",  # Line too long (handled by ruff)
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 60

# ! Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=core",
    "--cov=editing",
    "--cov=utils",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-m",
    "not slow",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ! Coverage configuration (enabled)
[tool.coverage.run]
source = ["core", "gui", "editing", "utils"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/conftest.py",
    "core/whisper_wrapper.py",
    "core/whisperx_wrapper.py",
    "utils/cleanup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
